<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".view.ProfileActivity">

    <include
        android:id="@+id/topNavigation"
        layout="@layout/top_navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topNavigation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/principalConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/name_example"
                android:textColor="@color/blue"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cpf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/cpf_service"
                android:textColor="@color/blue"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <TextView
                android:id="@+id/cpfValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cpf_value"
                android:textColor="@color/grey"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/cpf"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <TextView
                android:id="@+id/birthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/birthdate_service"
                android:textColor="@color/blue"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cpf" />

            <TextView
                android:id="@+id/birthDateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthdate_value"
                android:textColor="@color/grey"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/birthDate"
                app:layout_constraintTop_toBottomOf="@+id/cpfValue" />

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/age"
                android:textColor="@color/blue"
                android:textStyle="bold"

                app:layout_constraintStart_toEndOf="@id/birthDateValue"
                app:layout_constraintTop_toBottomOf="@+id/cpfValue" />

            <TextView
                android:id="@+id/ageValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/age_value"
                android:textColor="@color/grey"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/cpf"
                app:layout_constraintStart_toEndOf="@id/age" />

            <Button
                android:id="@+id/btnFollow"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:padding="20dp"
                android:textColor="@color/blue"
                android:text="@string/follow_to"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
                android:drawableTint="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/age" />

            <Button
                android:id="@+id/btnReason"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:padding="20dp"
                android:textColor="@color/blue"
                android:text="@string/reason"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
                android:drawableTint="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnFollow" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="169dp"
                android:layout_height="56dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/btn_cancel_style"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:layout_marginStart="22dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnReason" />

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="169dp"
                android:layout_height="56dp"
                android:text="@string/follow"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/btn_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="60dp"
                android:textStyle="bold"
                android:layout_marginEnd="22dp"
                app:layout_constraintTop_toBottomOf="@id/btnReason" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:background="@color/white"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav">

    </com.google.android.material.bottomnavigation.BottomNavigationView>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reasonBox"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topNavigation">

        <ImageView
            android:id="@+id/popup"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:contentDescription="@string/whitecontainer"
            android:src="@drawable/reason_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_popup"
            android:textColor="@color/blue"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/save"
            android:autoLink="all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_popup"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/blackLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cancel"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reason"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/blackLine" />

        <EditText
            android:id="@+id/typeReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_reason"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/grey"
            android:background="@null"
            android:textSize="18sp"
            android:focusable="auto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reason"
            android:inputType="text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>