<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".view.MainActivity">

    <include
        android:id="@+id/navigationTopBar"
        layout="@layout/top_navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigationTopBar"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigationTopBar">

        <TextView
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/nome_completo"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:inputType="text"
            android:backgroundTint="@color/blue"
            android:hint="@string/ex_maria_da_silva"
            app:layout_constraintTop_toBottomOf="@id/fullName"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/cpf"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/cpf"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etName" />

        <EditText
            android:id="@+id/etCpf"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/blue"
            android:hint="@string/cpf_example"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cpf" />

        <TextView
            android:id="@+id/birthDate"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/birthdate"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etCpf" />

        <EditText
            android:id="@+id/etBirthDate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:inputType="number"
            android:backgroundTint="@color/blue"
            android:hint="@string/birthdate_example"
            app:layout_constraintTop_toBottomOf="@id/birthDate" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/cellphone_example"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etBirthDate" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/blue"
            android:hint="@string/cellphone"
            android:inputType="number"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="250dp"
            android:layout_height="56dp"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:background="@drawable/btn_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@id/etPhone" />


    </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav">

    </com.google.android.material.bottomnavigation.BottomNavigationView>
    

</androidx.constraintlayout.widget.ConstraintLayout>